--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <h1>My Contact Information</h1>
   <p><strong>Phone No</strong>: 9986565166<br></p>
   <p><strong>Email </strong>: ashfaq.r.27@gmail.com</p>
-  <p><strong>Address</strong> : 2nd cross S.R.Road <br>Gandhinagar<br>Challakere - 577522</p>
+  <p><strong>Address</strong> : 12/11-7 2nd Floor 1st cross Mounaguru Mutt Road <br>Cox Town<br>Bangalore - 560005</p>
 
   <form class="" action="mailto:ashfaq.r.27@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
